[workspace]
resolver = "2"
members = [
    "passport_auth",
    "passport_core",
    "passport_jwt"
]

[workspace.dependencies]
async-trait = "0.1"
thiserror = { version = "2.0" }
bcrypt = { version = "0.16" }
tracing = { version = "0.1" }
chrono = { version = "0.4" }
serde = { version = "1.0.210", features = ["derive"] }
jsonwebtoken = { version = "9.3" }
passport_core = { path = "./passport_core" }
